2015-07-29  Corinna Vinschen  <corinna@vinschen.de>

	* strace.cc (main2): Rename from main.
	(main): Make room for _cygtls area on stack and just call main2.  Add
	comment to explain why.

2015-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* ldd.cc (STATUS_DLL_NOT_FOUND): Drop definition.
	(report): Handle STATUS_ENTRYPOINT_NOT_FOUND exception.  Explain why.

2015-07-08  Corinna Vinschen  <corinna@vinschen.de>

	* tzset.c (main): Check timezone and country case-insensitive.

2015-06-07  Jon Turney  <jon.turney@dronecode.org.uk>

	* strace.cc (proc_child): Log process and thread create and exit,
	and DLL load and unload.
	(GetFileNameFromHandle): New function.

2015-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc (main): Widen UID field in long format to accommodate longer
	UIDs since Cygwin 1.7.34.  Remove Windows 2000 considerations.  Fix
	comments accordingly.

2015-06-08  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (from_fstab_line): Don't convert slashes to backslashes for
	bind mounts.  Explain why.

2015-04-21  Corinna Vinschen  <corinna@vinschen.de>

	* tzmap-from-unicode.org: Convert Calcutta to Kolkata.
	* tzmap.h: Regenerate.

2015-02-28  Corinna Vinschen  <corinna@vinschen.de>

	* getfacl.c (usage): Change --all to --access, --dir to --default.
	Align text to output of Linux tool.
	(longopts): Add --access and --default options.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (MAX_SID_LEN): Remove.  Instead, use SECURITY_MAX_SID_SIZE
	throughout.
	(enum_unix_groups): Introduce numeric_psid and rearrange code to avoid
	potential heap corruption.
	* mkpasswd.c: Ditto.

2015-02-17  Ken Brown  <kbrown@cornell.edu>

	* dump_setup.cc (check_package_files): Accommodate postinstall
	files in any directory whose name contains "/postinstall/", not
	just /etc/postinstall.

2015-02-03  Corinna Vinschen  <corinna@vinschen.de>

	* regtool.cc (longopts): Add --force option.
	(opts): Add -f option.
	(restore_flags): New variable.