@@ -1,3 +1,8 @@
+2015-08-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* strace.cc (main2): Don't call setvbuf on NULL descriptor.
+	Explicitely fclose ofile.
+
 2015-07-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* strace.cc (main2): Rename from main.
